@@ -5740,4 +5740,12 @@ a)"xI
 /c*+/
     ab\=ph,offset=2
 
+/\A\s*(a|(?:[^`]{28500}){4})/I
+    a
+
+/\A\s*((?:[^`]{28500}){4})/I
+
+/\A\s*((?:[^`]{28500}){4}|a)/I
+    a
+
 # End of testinput2
